--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -10,4 +10,9 @@
         android:id="@+id/show_summation"
         android:title="Show Total Price"
         app:showAsAction="never"/>
+
+    <item
+        android:id="@+id/save_csv_file"
+        android:title="Save in csv file"
+        app:showAsAction="never"/>
 </menu>
