--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="customOrange">#E64A19</color>
+    <color name="customDarkBackground">#2C2C2C</color>
+    <color name="customCard">#363636</color>
+    <color name="editTextHintColor">#8D8D8D</color>
 </resources>
