--- a/app/src/main/res/layout/activity_session.xml
+++ b/app/src/main/res/layout/activity_session.xml
@@ -14,6 +14,7 @@
         tools:listitem="@layout/session_item"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        app:shapeAppearanceOverlay="@style/fab_square"
         android:id="@+id/button_add_session"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
