--- a/app/src/main/res/layout/session_item.xml
+++ b/app/src/main/res/layout/session_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     android:layout_marginEnd="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginTop="8dp">
+    android:layout_marginTop="8dp"
+    android:backgroundTint="@color/customCard">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -15,22 +16,22 @@
         <TextView
             android:id="@+id/text_view_session_item"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="0.8"
             android:textSize="16sp"
             android:text="session"
             android:ellipsize="end"
             android:maxLines="1"
             android:singleLine="true"
-            android:textColor="@android:color/black" />
+            android:textColor="@android:color/white" />
 
         <TextView
             android:id="@+id/text_view_session_sum"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="0.2"
             android:textSize="16sp"
-            android:textColor="#0000FF"
+            android:textColor="@color/customOrange"
             android:paddingStart="8dp"
             android:paddingEnd="8dp" />
 
