--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,14 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Base.Theme.Bazarnote" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+<resources>
+    <!-- Base application theme -->
+    <style name="Theme.Bazarnote" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Customize your theme here -->
+        <item name="android:colorBackground">@color/customDarkBackground</item>
+        <item name="colorPrimary">@color/customOrange</item>
+        <item name="colorPrimaryVariant">@color/customOrange</item>
+        <item name="colorOnPrimary">@android:color/white</item>
+        <item name="colorSecondary">@color/customOrange</item>
+        <item name="colorSecondaryVariant">@color/customOrange</item>
+        <item name="colorOnSecondary">@android:color/white</item>
+        <item name="editTextStyle">@style/CustomEditText</item>
     </style>
 </resources>
