--- a/app/src/main/res/menu/session_menu.xml
+++ b/app/src/main/res/menu/session_menu.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/delete_all_sessions"
-        android:title="Delete All Sessions"
-        app:showAsAction="never"/>
+        android:title="@string/menu_del_all_sessions"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/show_summation"
-        android:title="Show Total Price"
-        app:showAsAction="never"/>
+        android:title="@string/menu_show_summation"
+        app:showAsAction="never" />
 
     <item
         android:id="@+id/session_save_csv_file"
-        android:title="Save in CSV File"
-        app:showAsAction="never"/>
+        android:title="@string/menu_save_in_csv_file"
+        app:showAsAction="never" />
 </menu>
