--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/delete_all_notes"
-        android:title="Delete All Notes"
+        android:title="@string/menu_del_all_notes"
         app:showAsAction="never"/>
 
     <item
         android:id="@+id/show_summation"
-        android:title="Show Total Price"
+        android:title="@string/menu_show_summation"
         app:showAsAction="never"/>
 
     <item
         android:id="@+id/save_csv_file"
-        android:title="Save in CSV File"
+        android:title="@string/menu_save_in_csv_file"
         app:showAsAction="never"/>
 </menu>
