--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="CustomEditText" parent="Widget.AppCompat.EditText">
-        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textColor">@color/white</item>
         <item name="android:padding">10dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:background">@drawable/custom_edittext_background</item>
