--- a/app/src/main/res/layout/session_item.xml
+++ b/app/src/main/res/layout/session_item.xml
@@ -17,20 +17,22 @@
             android:id="@+id/text_view_session_item"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.8"
+            android:layout_weight="0.5"
             android:textSize="16sp"
             android:text="session"
             android:ellipsize="end"
             android:maxLines="1"
             android:singleLine="true"
-            android:textColor="@android:color/white" />
+            android:textColor="@color/white" />
 
         <TextView
             android:id="@+id/text_view_session_sum"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.2"
+            android:layout_weight="0.5"
+            android:gravity="right"
             android:textSize="16sp"
+            android:text="price"
             android:textColor="@color/customOrange"
             android:paddingStart="8dp"
             android:paddingEnd="8dp" />
