--- a/app/src/main/res/layout/session_item.xml
+++ b/app/src/main/res/layout/session_item.xml
@@ -9,7 +9,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:orientation="horizontal"
         android:padding="8dp">
 
@@ -29,7 +29,7 @@
             android:id="@+id/text_view_session_sum"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_weight="0.5"
+            android:layout_weight="0.3"
             android:gravity="right"
             android:textSize="16sp"
             android:text="price"
@@ -37,6 +37,11 @@
             android:paddingStart="8dp"
             android:paddingEnd="8dp" />
 
+        <CheckBox
+            android:id="@+id/session_chk_btn"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:gravity="center" />
     </LinearLayout>
 
 </androidx.cardview.widget.CardView>
